--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "modules/stdlib"]
 	path = modules/stdlib
 	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
+[submodule "modules/keepalived"]
+	path = modules/keepalived
+	url = https://github.com/purpleidea/puppet-keepalived.git
+[submodule "modules/glusterfs"]
+	path = modules/glusterfs
+	url = https://github.com/thias/puppet-glusterfs.git
