Move gluster peers declaration in yaml commons
Signed-off-by: Christophe Vanlancker <christophe.vanlancker@inuits.eu>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/glusterfs"]
 	path = modules/glusterfs
 	url = https://github.com/thias/puppet-glusterfs.git
+[submodule "modules/lvm"]
+	path = modules/lvm
+	url = https://github.com/puppetlabs/puppetlabs-lvm.git
