Use LVM and create ext4 /export/apache_gl01 logical volume to be used by Gluster
Signed-off-by: Christophe Vanlancker <christophe.vanlancker@inuits.eu>

--- a/hieradata/nodes/storage02.yaml
+++ b/hieradata/nodes/storage02.yaml
@@ -1,1 +1,9 @@
 ---
+lvm::volume_groups:
+  vg_gluster:
+    physical_volumes:
+      - /dev/sdb
+    logical_volumes:
+      apache_gl01:
+        mountpath: /export/apache_gl01
+        size: '512M'
