Rework hiera resource placements and mount apache_gl gluster volume on the clients
Signed-off-by: Christophe Vanlancker <christophe.vanlancker@inuits.eu>

--- a/hieradata/clients/common.yaml
+++ b/hieradata/clients/common.yaml
@@ -1,1 +1,5 @@
 ---
+glusterfs::mount:
+  '/var/vhosts':
+    device: 'storage01.local:/apache_gl'
+    options: 'defaults,_netdev,backupvolfile-server=storage02.local'
