--- a/hieradata/clients/common.yaml
+++ b/hieradata/clients/common.yaml
@@ -1,5 +1,6 @@
 ---
 glusterfs::mount:
-  '/var/vhosts':
+  'apache_data':
+    path: '/srv/apache_data'
     device: 'storage01.local:/apache_gl'
     options: 'defaults,_netdev,backupvolfile-server=storage02.local'
